# cfwp

./: Cargo.toml  warp-api.yaml
examples/register/: Cargo.toml
examples/register/src/: main.rs
warp-client/: Cargo.toml
warp-client/src/: api.rs  config.rs  lib.rs  main.rs
warp-raw-api/: Cargo.toml  README.md
warp-raw-api/.openapi-generator/: FILES
warp-raw-api/docs/: DefaultApi.md  GetAccount200Response.md  GetBoundDevices200Response.md  GetClientConfig200Response.md  GetClientConfig200ResponseCaptivePortal.md  GetClientConfig200ResponseDenylist.md  GetClientConfig200ResponseNetworks.md  GetClientConfig200ResponseNetworks1.md  GetClientConfig200ResponseNetworks1V4.md  GetClientConfig200ResponseNetworks1V6.md  GetSourceDevice200Response.md  GetSourceDevice200ResponseAccount.md  GetSourceDevice200ResponseConfig.md  GetSourceDevice200ResponseConfigEndpoint.md  GetSourceDevice200ResponseConfigInterface.md  GetSourceDevice200ResponseConfigInterfaceAddresses.md  GetSourceDevice200ResponseConfigPeers.md  GetSourceDevice200ResponseConfigServices.md  Register200Response.md  RegisterRequest.md  ResetAccountLicense200Response.md  UpdateAccount200Response.md  UpdateAccountRequest.md  UpdateBoundDevice200Response.md  UpdateBoundDeviceRequest.md  UpdateSourceDevice200Response.md  UpdateSourceDevice200ResponseAccount.md  UpdateSourceDeviceRequest.md
warp-raw-api/src/apis/: configuration.rs  default_api.rs
warp-raw-api/src/models/: get_account_200_response.rs  get_bound_devices_200_response.rs  get_client_config_200_response.rs  get_client_config_200_response_denylist.rs  (+24 more)
