[package]
name = "warp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
rand = "0.8.5"
reqwest = { version = "0.12.8", default-features = false }
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.40.0", features = ["full"] }
warp-raw-api = { path = "../warp-raw-api" }
x25519-dalek = { version = "2.0.1", features = ["getrandom", "reusable_secrets"] }
